--- a/web/index.html
+++ b/web/index.html
@@ -1,2 +1,31 @@
+<!doctype html>
+<html>
+	<head>
+		<link href="main.css" rel="stylesheet" type="text/css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="main.js"></script>
+	</head>
+<body>
 <h1>Login Page</h1>
 <p>A code challenge demo</p>
+
+<h2>Please enter your username and password</h2>
+<form id="loginForm" action="api.php" method="post">
+
+  <div class="container">
+    <label for="uname"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="uname" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
+
+    <button type="submit">Login</button>
+   
+  </div>
+  <div class="container" style="background-color:#f1f1f1">
+    <!--<button type="button" class="cancelbtn">Cancel</button>-->
+    <p id = "messagebox">Message here</p>
+  </div>
+</form>
+</body>
+</html>
